--- a/tareajs.html
+++ b/tareajs.html
@@ -10,7 +10,7 @@
       <p>Hay que entregar la asignación con una alerta java Script</p>
       <button type="button" onclick='entregarTarea()'>entregar</button>
     </div>
-
+<!-- ALERTA EN JS -->
     <script>
       function entregarTarea() {
         document.getElementById("Primera tarea").innerHTML = "Entregado";
